--- a/Changes
+++ b/Changes
@@ -23,3 +23,7 @@ Revision history for Perl extension Hook::Filter
 
 0.06  2007-05-23
         - POD updates
+
+0.07  2007-05-25
+        - using BEGIN blocks instead of INIT blocks
+        - Hook::Filter now *must* be used with parameter 'hook =>'
