--- a/Changes
+++ b/Changes
@@ -25,5 +25,5 @@ Revision history for Perl extension Hook::Filter
         - POD updates
 
 0.07  2007-05-25
-        - using BEGIN blocks instead of INIT blocks
+        - refactored to avoid 'Too late to run INIT' block message when used from eval/require
         - Hook::Filter now *must* be used with parameter 'hook =>'
